--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <div class="coin-container" id="coin-container">
             <div class="coin" id="coin">
                 <div class="head">
-                    <img src="images/head.png" alt="head">
+                    <img src="img/moneda.png" alt="head">
                 </div>
                 <div class="tail">
-                    <img src="images/tail.png" alt="tail">
+                    <img src="img/moneda.png" alt="tail">
                 </div>
             </div>
         </div>
