--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Flip the Coin</h1>
-        <p>Press the coin or the button to flip the coin</p>
+        <p>Press the button to flip the coin</p>
         <div class="coin-container" id="coin-container">
             <div class="coin" id="coin">
                 <div class="head">
